# mnist-classifier-fullstack

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/model_traingin/: cnn.py  improved_cnn.py
backend/model_traingin/test/: mlp.py  test.py
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/components/: MnistCanvas.css  MnistCanvas.vue
